# webmessenger

./: .gitignore  Dockerfile  README.md  alembic.ini  data.db  docker-compose.yml  pyproject.toml  run.sh  sample.env
alembic/: env.py  script.py.mako
alembic/versions/: 39e874cef2d0_initial.py  f81ed92dbb64_initial.py
migrations/: env.py
osiris/: __init__.py  main.py
osiris/core/: __init__.py  config.py  db.py  logger_cfg.yaml  logger_setup.py
osiris/models/: __init__.py  chat_model.py  message_model.py  user_model.py  users_chats_model.py
osiris/schemas/: exception.py
osiris/services/auth_service/: api.py  auth_service.py  dependency.py  exceptions.py  models.py
osiris/services/chats_service/: api.py  chat_service.py  models.py  service.py  websocket_messages.py
osiris/templates/: MainOsiris.html  Messenger copy.html  Messenger.html  RegistrationOsiris.html  mainOsiris.css
osiris/templates/static/scripts/: MainOsiris.js  Message_ols.js  Messenger.js  RegistrationOsiris.js  websocket.js
osiris/templates/static/styles/: Messenger.scss  mainOsiris.css  messenger.css  registrationOsiris.css  styles.css
